tests/ui/diagnostic_namespace/on_unknown/combined_use_and_module.stderr
error[E0432]: the message
  --> $DIR/combined_use_and_module.rs:22:9
   |
LL | pub use constants::THREE;
   |         ^^^^^^^^^^^-----
   |                    |
   |                    the label
   |
   = note: unresolved import `constants::THREE`
   = note: use note 1
   = note: use note 2
   = note: module note 1
   = note: module note 2

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
